--- a/app/frontend/.env
+++ b/app/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://cxo-companion.preview.emergentagent.com
+REACT_APP_API_URL=https://your-backend-url.run.app
 WDS_SOCKET_PORT=443
