--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@ npm-cache/
 C:Users*/
 AppData/
 Roaming/
+node_modules
+dist
+.env
+.coverage
+coverage
+/.idea
+.vscode
+.DS_Store
+uploads
+node_modules/
+.env
+*.zip
+__pycache__/
+*.log
+
+
